--- a/src/scss/base/meshki.scss
+++ b/src/scss/base/meshki.scss
@@ -1,29 +1,12 @@
-/*
- * Meshki v2.0.0 (https://borderliner.github.io/Meshki/)
- * Copyright 2017 Mohammadreza Hajianpour <hajianpour.mr@gmail.com>
- *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- *    http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
- */
-
 // Base Styles
 html {
-  -webkit-tap-highlight-color: $transparent-color; /* Remove highlight color */
+  -webkit-tap-highlight-color: $transparent-color; // Remove highlight color
   font-size: $font-size-global;
   height: 100%;
 
 }
 
-/* General attributes of the body tag */
+// General attributes of the body tag
 body {
   background-color: $background-color;
   color: $text-color;
@@ -74,13 +57,13 @@ hr {
   margin-top: 3rem;
 }
 
-/* Text selection color */
+// Text selection color
 ::selection {
-  background: $text-selection-color; /* WebKit/Blink Browsers */
+  background: $text-selection-color; // WebKit/Blink Browsers
 }
 
 ::-moz-selection {
-  background: $text-selection-color; /* Gecko Browsers */
+  background: $text-selection-color; // Gecko Browsers
 }
 
 // Self Clearing Goodness
@@ -94,25 +77,23 @@ hr {
 }
 
 // Media Queries
-/*
-Note: The best way to structure the use of media queries is to create the queries
-near the relevant code. For example, if you wanted to change the styles for buttons
-on small devices, paste the mobile query code up in the buttons section and style it
-there. These media queries have been taken from Twitter's Bootstrap for
-compatibility reasons.
-*/
+// NOTE: The best way to structure the use of media queries is to create the
+// queries near the relevant code. For example, if you wanted to change the
+// styles for buttons on small devices, paste the mobile query code up in the
+// buttons section and style it there. These media queries have been taken from
+// Twitter's Bootstrap for compatibility reasons.
 
-/* Larger than mobile */
+// Larger than mobile
 // @media (min-width: $media-mobile) {}
 
-/* Larger than phablet (also point when grid becomes active) */
+// Larger than phablet (also point when grid becomes active)
 // @media (min-width: $media-phablet) {}
 
-/* Larger than tablet */
+// Larger than tablet
 // @media (min-width: $media-tablet) {}
 
-/* Larger than desktop */
+// Larger than desktop
 // @media (min-width: $media-desktop) {}
 
-/* Larger than Desktop HD */
+// Larger than Desktop HD
 // @media (min-width: $media-desktop-hd) {}
