--- a/src/scss/components/code.scss
+++ b/src/scss/components/code.scss
@@ -1,21 +1,4 @@
-/*
- * Meshki v2.0.0 (https://borderliner.github.io/Meshki/)
- * Copyright 2017 Mohammadreza Hajianpour <hajianpour.mr@gmail.com>
- *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- *    http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
- */
-
-/* Single code, default style */
+// Single code, default style
 code {
   background-color: transparent;
   border: 1px $text-color solid;
@@ -25,14 +8,14 @@ code {
   padding: 1px 5px;
   white-space: nowrap;
 
-  /* Single code, filled style */
+  // Single code, filled style
   .filled {
     background-color: $text-color;
     color: $meshki-black;
   }
 }
 
-/* pre is used for a block of code */
+// pre is used for a block of code
 pre {
   background-color: transparent;
   border: 2px $text-color solid;
@@ -41,12 +24,12 @@ pre {
   overflow-x: auto;
   white-space: normal;
 
-  /* Filled mode for blocks of code */
+  // Filled mode for blocks of code
   .filled {
     background-color: $text-color;
     color: $meshki-black;
 
-    /* If the code is the immediate child of pre with filled mode */
+    // If the code is the immediate child of pre with filled mode
     & > code {
       background-color: $text-color;
       color: $meshki-black;
@@ -54,7 +37,7 @@ pre {
   }
 }
 
-/* If the code is the immediate child of pre */
+// If the code is the immediate child of pre
 pre > code {
   border: 0;
   display: inline;
