--- a/src/scss/components/form.scss
+++ b/src/scss/components/form.scss
@@ -1,23 +1,6 @@
-/*
- * Meshki v2.0.0 (https://borderliner.github.io/Meshki/)
- * Copyright 2017 Mohammadreza Hajianpour <hajianpour.mr@gmail.com>
- *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- *    http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
- */
-
-/* General attributes */
+// General attributes
 @include create-input-elements {
-  /* Removes awkward default styles on some inputs for iOS */
+  // Removes awkward default styles on some inputs for iOS
   -moz-appearance: none;
   -webkit-appearance: none;
   appearance: none;
@@ -32,21 +15,21 @@
   transition: border .3s, background-color .3s, box-shadow .3s;
 }
 
-/* Dim the form elements when they're disabled */
+// Dim the form elements when they're disabled
 @include create-input-elements(':disabled') {
   background-color: $form-color-disabled;
   border-color: $form-color-disabled;
   color: $form-color-disabled-text;
 }
 
-/* Dropdown arrow for everyone! */
+// Dropdown arrow for everyone!
 select {
   background: $select-dropdown-arrow;
   background-color: $form-color-background;
   background-position: 98% 50%;
   outline: 0 !important;
 
-  /* Firefox outline bug */
+  // Firefox outline bug
   &:-moz-focusring {
     color: transparent;
     text-shadow: 0 0 0 $normal-black;
@@ -58,7 +41,7 @@ textarea {
   padding: 6px 10px;
 }
 
-/* Blue light animation when the form elements get focus */
+// Blue light animation when the form elements get focus
 @include create-input-elements(':focus') {
   background-color: $white;
   // border: 1px solid $form-color-border;
@@ -66,7 +49,7 @@ textarea {
   outline: 0 !important;
 }
 
-/* Label and Legend normalization */
+// Label and Legend normalization
 label,
 legend {
   display: block;
@@ -74,7 +57,7 @@ legend {
   margin-bottom: .5rem;
 }
 
-/* Fieldset normalization */
+// Fieldset normalization
 fieldset {
   border: 2px solid $text-color !important;
   border-radius: 5px;
@@ -82,22 +65,22 @@ fieldset {
   padding: 20px !important;
 }
 
-/* Checkbox and Radio normalization */
+// Checkbox and Radio normalization
 @include create-checkradio {
   display: inline;
 
-  /* Make the actual boxes invisible */
+  // Make the actual boxes invisible
   opacity: 0;
   position: absolute;
 
-  /* Checkbox and radio normalization */
+  // Checkbox and radio normalization
   cursor: pointer;
   margin: 5px;
   vertical-align: middle;
 }
 
 
-/* Labels for checkboxes and radios have relative position to their parent */
+// Labels for checkboxes and radios have relative position to their parent
 label {
   .checkbox,
   .radio {
@@ -108,7 +91,7 @@ label {
   }
 }
 
-/* General attributes for checkboxes and radio buttons */
+// General attributes for checkboxes and radio buttons
 input[type='checkbox'] + label.checkbox::before,
 input[type='radio'] + label.radio::before {
   background-color: transparent;
@@ -125,22 +108,22 @@ input[type='radio'] + label.radio::before {
   width: 10px;
 }
 
-/* Round shape for radio boxes */
+// Round shape for radio boxes
 input[type='radio'] + label.radio::before {
   border-radius: 20px;
 }
 
-/* When the checkbox is checked */
+// When the checkbox is checked
 input[type='checkbox']:checked + label.checkbox:before {
   background-color: $form-checkradio-color;
 }
 
-/* When the radio button is checked */
+// When the radio button is checked
 input[type='radio']:checked + label.radio:before {
   background-color: $form-checkradio-color;
 }
 
-/* Remove outlines of checkboxes and radio buttons, especially for Firefox */
+// Remove outlines of checkboxes and radio buttons, especially for Firefox
 input[type='checkbox']:focus + label.checkbox,
 input[type='radio']:focus + label.radio {
   outline: none !important;
@@ -148,7 +131,7 @@ input[type='radio']:focus + label.radio {
 
 input {
   &[type='range'] {
-    /* Style input range */
+    // Style input range
     -webkit-appearance: none;
     background-color: transparent;
     margin: 0 5px;
@@ -195,7 +178,7 @@ input {
       width: 17px;
     }
 
-    /* Fix Firefox outline bug */
+    // Fix Firefox outline bug
     &::-moz-focus-outer {
       border: 0;
     }
@@ -227,17 +210,17 @@ input {
 }
 
 
-/* Change placeholder color for text inputs */
-/* Chrome */
+// Change placeholder color for text inputs
+// Chrome
 ::-webkit-input-placeholder,
-/* IE 10+ */
+// IE 10+
 :-ms-input-placeholder {
   color: $form-color-placeholder;
 }
 
-/* Firefox 19+ */
+// Firefox 19+
 ::-moz-placeholder,
-/* Firefox 4 - 18 */
+// Firefox 4 - 18
 :-moz-placeholder {
   color: $form-color-placeholder;
   opacity: 1;
