--- a/src/scss/components/list.scss
+++ b/src/scss/components/list.scss
@@ -1,23 +1,6 @@
-/*
- * Meshki v2.0.0 (https://borderliner.github.io/Meshki/)
- * Copyright 2017 Mohammadreza Hajianpour <hajianpour.mr@gmail.com>
- *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- *    http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
- */
-
-/* Change the style of nested lists */
+// Change the style of nested lists
 ul {
-  /* Unordered Lists have empty disc style */
+  // Unordered Lists have empty disc style
   list-style: disc;
 
   ul,
@@ -28,7 +11,7 @@ ul {
 }
 
 ol {
-  /* Ordered Lists have numerical style */
+  // Ordered Lists have numerical style
   list-style: decimal;
 
   ul,
@@ -38,7 +21,7 @@ ol {
   }
 }
 
-/* Lists have bottom margin */
+// Lists have bottom margin
 li {
   margin-bottom: 1rem;
 }
