--- a/src/scss/components/sidenav.scss
+++ b/src/scss/components/sidenav.scss
@@ -1,21 +1,4 @@
-/*
- * Meshki v2.0.0 (https://borderliner.github.io/Meshki/)
- * Copyright 2017 Mohammadreza Hajianpour <hajianpour.mr@gmail.com>
- *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- *    http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
- */
-
-/* The side navigation menu */
+// The side navigation menu
 .sidenav {
   background-color: $sidenav-color-bg;
   height: 100%;
@@ -25,10 +8,10 @@
   position: fixed;
   top: 0;
   transition: .5s;
-  width: 0; /* changes with meshki.js */
-  z-index: 10; /* Stays on top of everything, unless a modal is implemented */
+  width: 0; // changes with meshki.js
+  z-index: 10; // Stays on top of everything, unless a modal is implemented
 
-  /* Position and style the close button (top right corner) */
+  // Position and style the close button (top right corner)
   .sidenav-close-button {
     font-size: 3.6rem !important;
     outline: 0 !important;
@@ -38,13 +21,13 @@
     top: 0;
   }
 
-  /* Special form of <hr> for sidenav */
+  // Special form of <hr> for sidenav
   hr {
     border-color: $sidenav-color-links;
     width: 80%;
   }
 
-  /* The links inside side navigation panel */
+  // The links inside side navigation panel
   a {
     color: $sidenav-color-links;
     display: block;
@@ -59,7 +42,7 @@
       color: $text-color;
     }
 
-    /* No color change for disabled sidenav links */
+    // No color change for disabled sidenav links
     &[disabled] {
       cursor: default;
     }
@@ -71,7 +54,7 @@
     }
   }
 
-  /* The buttons inside side navigation panel */
+  // The buttons inside side navigation panel
   button {
     margin-left: 20px !important;
     margin-right: 20px !important;
@@ -81,7 +64,7 @@
   }
 }
 
-/* Pushes the container div with effect */
+// Pushes the container div with effect
 .container {
   position: absolute;
   transition: margin-left .5s, margin-right .5s;
@@ -102,7 +85,7 @@
   z-index: 1;
 }
 
-/* Change the style of the sidenav for non-mobiles */
+// Change the style of the sidenav for non-mobiles
 @media (min-width: $media-phablet) {
   .sidenav {
     padding-top: 60px;
