--- a/src/scss/components/typography.scss
+++ b/src/scss/components/typography.scss
@@ -1,20 +1,3 @@
-/*
- * Meshki v2.0.0 (https://borderliner.github.io/Meshki/)
- * Copyright 2017 Mohammadreza Hajianpour <hajianpour.mr@gmail.com>
- *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- *    http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
- */
-
 h1,
 h2,
 h3,
@@ -33,7 +16,7 @@ h4 { @include heading-styler(2.4rem, 1.35, -.08rem); }
 h5 { @include heading-styler(1.8rem, 1.5, -.05rem); }
 h6 { @include heading-styler(1.5rem, 1.6, 0); }
 
-/* Increase font sizes for devices larger than phablet */
+// Increase font sizes for devices larger than phablet
 @media (min-width: $media-phablet) {
   h1 { font-size: 5rem;   }
   h2 { font-size: 4.2rem; }
