--- a/src/scss/utils/variables/_fonts.scss
+++ b/src/scss/utils/variables/_fonts.scss
@@ -1,28 +1,9 @@
-/*
- * Meshki v2.0.0 (https://borderliner.github.io/Meshki/)
- * Copyright 2017 Mohammadreza Hajianpour <hajianpour.mr@gmail.com>
- *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- *    http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
- */
-
 $font-family:              'Open Sans', sans-serif;
 $font-weight:              400;
 $font-size-after:          1.6rem;
 
-/* NOTE
- * html font-size is set to 62.5% so that all the REM measurements throughout Meshki
- * are based on 10px sizing. So basically 1.5rem = 15px
- */
+// NOTE: html font-size is set to 62.5% so that all the REM measurements
+// throughout Meshki are based on 10px sizing. So basically 1.5rem = 15px
 $font-size-global:        62.5%;
 $font-size-body:          1.6rem;
 $font-line-height:        1.6;
