--- a/src/scss/utils/variables/_colors.scss
+++ b/src/scss/utils/variables/_colors.scss
@@ -29,7 +29,7 @@ $button-color-orange:              #e67e22;
 $button-color-orange-active:       #c16819;
 
 // Link Colors //================================
-$link-color-default:               $button-default-color;
+$link-color-default:               #55acee;
 $link-color-hover:                 #74c1fb;
 
 // Sidenav Colors //================================
