--- a/src/scss/utils/mixins/_button.scss
+++ b/src/scss/utils/mixins/_button.scss
@@ -3,7 +3,7 @@
 //   width: 50%;
 // }
 
-@mixin create-button($options) {
+@mixin create-button($options:'') {
   button#{$options},
   a.button#{$options},
   input[type="submit"]#{$options},
