--- a/src/scss/base/meshki.scss
+++ b/src/scss/base/meshki.scss
@@ -52,7 +52,6 @@ form {
 // Misc
 hr {
   border-top: 1px solid $text-color;
-  border-width: 0;
   margin-bottom: 3.5rem;
   margin-top: 3rem;
 }
@@ -69,6 +68,7 @@ hr {
 // Self Clearing Goodness
 .content,
 .row {
+  clear: both;
   &::after {
     clear: both;
     content: none;
