Fix pre.filled not filling the background with white color

--- a/src/scss/components/code.scss
+++ b/src/scss/components/code.scss
@@ -25,7 +25,7 @@ pre {
   white-space: normal;
 
   // Filled mode for blocks of code
-  .filled {
+  &.filled {
     background-color: $text-color;
     color: $meshki-black;
 
