--- a/src/scss/components/footer.scss
+++ b/src/scss/components/footer.scss
@@ -3,18 +3,20 @@ footer,
 .footer {
   background-color: $footer-color-background;
   border-top: 2px solid $text-color;
-  margin: 25px 0 0;
+  display: block;
+  left: 0;
   max-width: 100%;
   padding: 25px 50px 0;
+  position: absolute;
+  right: 0;
   text-align: center;
 
   // Remove bottom margins of columns
   // Remove bottom margin of .row for footer, it takes lots of space
   .col,
   .row {
-    margin-bottom: 0px;
+    margin-bottom: 0;
   }
-
 }
 
 // Align the text of the footer to the left for non-mobile
