--- a/src/scss/components/button.scss
+++ b/src/scss/components/button.scss
@@ -14,7 +14,7 @@
   color: $button-color-simple;
   cursor: pointer;
   display: inline-block;
-  font-size: 1.6rem;
+  font-size: $font-size-button;
   line-height: normal !important; // Fix Midori bug
   margin: 5px !important;
   // Button expands out of boundary bug
