--- a/src/scss/components/code.scss
+++ b/src/scss/components/code.scss
@@ -41,5 +41,9 @@ pre {
 pre > code {
   border: 0;
   display: inline;
+  left: 20px;
+  overflow: auto;
+  padding-left: 20px;
+  position: relative;
   white-space: pre;
 }
