--- a/docs/custom.css
+++ b/docs/custom.css
@@ -57,6 +57,7 @@ div.share-links i.fa {
   font-size: 1.5rem;
   color: #222;
   background-color: #E0E0E0;
+  margin-bottom: 5px;
 }
 
 .heading-font-size {
