--- a/docs/custom.css
+++ b/docs/custom.css
@@ -83,6 +83,8 @@ div.share-links i.fa {
 
 .clipboard-btn {
   float: right;
+  position: absolute;
+  right: 35px;
 }
 
 @media (min-width: 544px) {
