--- a/src/scss/plugins/rtl/main.scss
+++ b/src/scss/plugins/rtl/main.scss
@@ -204,7 +204,7 @@ input[type=radio]+label.radio:before {
   left: 0;
   padding-left: 30px !important;
   padding-right: 0 !important;
-  right: auto;
+  right: auto !important;
 }
 
 // Tables //================================
