--- a/src/scss/plugins/rtl/main.scss
+++ b/src/scss/plugins/rtl/main.scss
@@ -60,7 +60,7 @@ pre {
     border-radius: 0;
     border-style: none;
     display: block;
-    margin: -5px auto !important;
+    margin: -5px auto 5px auto !important;
   }
 }
 
@@ -73,8 +73,7 @@ pre {
     a:first-child {
       border-bottom-left-radius: 0;
       border-bottom-right-radius: 5px;
-      border-left-style: none;
-      border-right-style: solid;
+      border-style: solid;
       border-top-left-radius: 0;
       border-top-right-radius: 5px;
       margin-right: 0 !important;
@@ -83,9 +82,12 @@ pre {
     // Middle button
     button:not(:first-child):not(:last-child),
     a:not(:first-child):not(:last-child) {
-      border-style: solid;
+      border-bottom-style: solid;
+      border-top-style: solid;
       display: inline;
-      margin: -9px !important;
+      margin: -8px !important;
+      padding-right: 12px;
+      padding-left: 12px;
     }
 
     // Last button
@@ -93,8 +95,7 @@ pre {
     a:last-child {
       border-bottom-left-radius: 5px;
       border-bottom-right-radius: 0;
-      border-left-style: solid;
-      border-right-style: none;
+      border-style: solid;
       border-top-left-radius: 5px;
       border-top-right-radius: 0;
       margin-left: 0 !important;
