--- a/src/scss/plugins/rtl/_variables.scss
+++ b/src/scss/plugins/rtl/_variables.scss
@@ -1,7 +1,7 @@
-$rtl-font-family:   'Yekan';
+$rtl-font-family:   'Vazir FD';
 $rtl-font-source:   local($rtl-font-family),
-url('https://cdnjs.cloudflare.com/ajax/libs/meshki/1.5.1/fonts/yekan.woff') format('woff'),
-url('https://cdnjs.cloudflare.com/ajax/libs/meshki/1.5.1/fonts/yekan.ttf') format('truetype');
+url('https://cdnjs.cloudflare.com/ajax/libs/meshki/2.3.0/fonts/Vazir-Regular-FD.woff') format('woff'),
+url('https://cdnjs.cloudflare.com/ajax/libs/meshki/2.3.0/fonts/Vazir-Regular-FD.ttf') format('truetype');
 
 $rtl-font-size: 1.5rem;
 $rtl-word-spacing: .12em;
