--- a/docs/rtl/custom-rtl.css
+++ b/docs/rtl/custom-rtl.css
@@ -1,13 +1,17 @@
-.meshki-features i.fa {
+.meshki-features i.far,
+.meshki-features i.fas
+ {
   font-size: 5rem;
   margin-bottom: 20px;
 }
 
-.nav i.fa {
+.nav i.far,
+.nav i.fas {
   font-size: 1.8rem;
 }
 
-.logo i.fa {
+.logo i.far,
+.logo i.fas {
   padding-left: 8px;
 }
 
@@ -29,7 +33,8 @@ div.share-links {
   color: #DB4437;
 }
 
-div.share-links i.fa {
+div.share-links i.far,
+div.share-links i.fas {
   font-size: 4rem;
 }
 
