Update Meshki celebration info

--- a/docs/custom.css
+++ b/docs/custom.css
@@ -137,3 +137,9 @@ div.share-links {
   0%   { opacity: 1; }
   100% { opacity: .5; }
 }
+
+.celebration-5 {
+  position: relative;
+  top: -32px;
+  left: 20px;
+}
