--- a/docs/custom.css
+++ b/docs/custom.css
@@ -94,6 +94,28 @@ div.share-links {
   right: 35px;
 }
 
+.jquery-modal > .ui.modal {
+  background-color: #333;
+}
+
+.jquery-modal > .image.content {
+  padding-top: 30px;
+}
+
+.jquery-modal > .image-container {
+  background-color: #fff;
+  margin: 15px auto;
+  padding: 10px 20px;
+}
+
+.jquery-modal > .modal-footer {
+  background-color: #222;
+  color: #eee;
+}
+
+.jquery-modal > .ui.modal ui.medium.image {
+  text-align: center;
+}
 
 .download-buttons {
   margin-bottom: 32vh;
