--- a/docs/rtl/custom-rtl.css
+++ b/docs/rtl/custom-rtl.css
@@ -102,6 +102,14 @@ a {
   right: 35px;
 }
 
+#coinwidget {
+  width: 90%;
+}
+
+#coinwidget button {
+  width: 100%;
+}
+
 .jquery-modal > .ui.modal {
   background-color: #333;
 }
