--- a/docs/rtl/custom-rtl.css
+++ b/docs/rtl/custom-rtl.css
@@ -144,11 +144,11 @@ a {
 }
 
 .jquery-modal .wallet-number {
+  width: 100%;
   font-size: 1.5rem;
   color: darksalmon;
   border: 2px solid red;
-  padding: 5px 15px;
-  letter-spacing: 1.5px;
+  padding: 5px;
   text-align: center;
   margin: 15px 0;
 }
