--- a/src/scss/components/navbar.scss
+++ b/src/scss/components/navbar.scss
@@ -1,6 +1,6 @@
 nav,
 .nav {
-  height: 55px;
+  height: 54px;
 
   // Fixed Navbar properties
   &.fixed {
@@ -17,6 +17,7 @@ nav,
     overflow: hidden;
     padding: 0;
     width: 100%;
+    height: 100%;
     z-index: 1;
 
     // Elements in the navbar start from the left side
@@ -44,7 +45,7 @@ nav,
       & > a.button,
       & > button,
       & > input {
-        margin: 7px 5px auto !important;
+        margin: 5px 5px !important;
       }
 
       // Active navbar button
